# avian_collide_and_slide

./: Cargo.toml  README.md
assets/models/: gym.glb
examples/kinematic_controller/: controller.rs  input.rs  level.rs  main.rs  player.rs
src/: lib.rs
