[package]
name = "avian_collide_and_slide"
version = "0.1.0"
edition = "2021"
authors = ["tracefree"]
license = "MIT OR Apache-2.0"

[dependencies]
avian3d = "0.1.1"
bevy = "0.14.1"
bevy-inspector-egui = "0.25.1"

[[example]]
name = "kinematic_controller"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
incremental = false
debug = false
strip = "debuginfo"
